--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   auto_route: ^10.1.0
   http: ^1.5.0
   json_annotation: ^4.9.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
