--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.4
   ustb_sso: ^1.1.0
   crypto: ^3.0.5
+  fl_chart: ^0.70.0
 
 dev_dependencies:
   flutter_test:
