--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "the_seashell" "\0"
+            VALUE "CompanyName", "cn.thebeike" "\0"
+            VALUE "FileDescription", "the_beike" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "the_seashell" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "the_seashell.exe" "\0"
-            VALUE "ProductName", "the_seashell" "\0"
+            VALUE "InternalName", "the_beike" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 cn.thebeike.app All rights reserved." "\0"
+            VALUE "OriginalFilename", "the_beike.exe" "\0"
+            VALUE "ProductName", "the_beike" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
