chore(dep): add url_launcher lib

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   package_info_plus: ^9.0.0
   device_info_plus: ^12.2.0
   markdown_widget: ^2.3.2
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
